Fix confirmations align

--- a/src/containers/app/scss/global.scss
+++ b/src/containers/app/scss/global.scss
@@ -2365,11 +2365,12 @@ input[type="file"] {
 	.card {
 		//margin: 15px;
 		transition: 0.2s;
-		min-height: 215px;
+		min-height: 252px;
 		//height: calc(100% - 15px);
 		
 		&.card-tall {
-			min-height: 445px;
+			min-height: 520px;
+
 			@media (max-width: 760px) {
 				min-height: auto;
 			}
